traefik/valkey.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valkey
  namespace: traefik
spec:
  serviceName: valkey
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
      - name: valkey
        image: valkey/valkey:9.2-alpine
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 32Mi
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: valkey-data
          mountPath: /data
      volumes:
      - name: valkey-data
        hostPath:
          path: /mnt/cephfs/docker/traefik/valkey
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-valkey
  namespace: traefik
  annotations:
    metallb.io/address-pool: "main-pool"
    metallb.io/allow-shared-ip: "traefik"
spec:
  # externalTrafficPolicy: Local
  selector:
    app: valkey
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: LoadBalancer
  loadBalancerIP: 10.1.1.55
  externalIPs:
    - 10.1.1.11
